# fixerss

./: .gitignore  Cargo.toml  Dockerfile  README.md  fixerss.toml  rustfmt.toml
config/: Cargo.toml
config-runner/: Cargo.toml
config-runner/src/: main.rs
config/src/: lib.rs
config/src/config/: mod.rs
feed-spec/: Cargo.toml
fixerss/: Cargo.toml
fixerss/migrations/: 01_create_table.sql
fixerss/src/: lib.rs  main.rs  option_config.rs  server_config.rs
fixerss/tests/: health_check.rs
fixerss/tests/api/: helpers.rs
oneshot/: Cargo.toml
oneshot/src/: main.rs
server/: Cargo.toml
server/migrations/: 01_create_items_table.sql  02_add_inserted_at_column.sql
server/src/: lib.rs  main.rs  refresher.rs  routes.rs  server_config.rs  settings_guard.rs  use_case.rs
server/tests/: fixerss.toml  refresh.rs
server/tests/api/: health_check.rs  helpers.rs  index.rs  list_feeds.rs  main.rs  metrics.rs  rss_xml.rs
server/tests/refresh/: failure.rs  main.rs  success.rs
settings/: Cargo.toml
settings/src/: lib.rs
settings/src/settings/: duration.rs  mod.rs  selector.rs
src/: lib.rs
src/config/: duration.rs  mod.rs  selector.rs
