[package]
name = "fixerss"
version = "0.1.0"
authors = ["Thomas Harris <teh019283@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
argh = "0.1.4"
chrono = "0.4.19"
log = "0.4.14"
rss = "1.10.0"
scraper = "0.12.0"
serde = "1.0.125"
serde_derive = "1.0.125"
simple_logger = "1.11.0"
toml = "0.5.8"
ureq = "2.1.0"
