[package]
name = "fixerss"
version = "0.1.0"
authors = ["Thomas Harris <teh019283@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "3045e0a" }
