[package]
name = "fixerss"
version = "0.1.0"
authors = ["Thomas Harris <teh019283@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "3045e0a" }
serde = "1.0.125"

[dev-dependencies]
anyhow = "1.0.40"
reqwest = { version = "0.11.2",  default_features = false, features = ["rustls"] }
tokio = "1.4.0"
