[package]
name = "server"
version = "0.3.0"
authors = ["Thomas Harris <teh019283@gmail.com>"]
edition = "2018"

[lib]
# sqlx::query has a failing doc test but I can find literally no info about it
# so, no doc tests until we figure out what the hell is going on
doctest = false

[dependencies]
serde = "1.0.126"
settings = { path = "../settings" }
toml = "0.5.8"
thiserror = "1.0.25"
sqlx = { version = "0.5.5", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
anyhow = "1.0.41"
futures = "0.3.15"
tokio = "1.7.1"
rss = "1.10.0"
chrono = "0.4.19"
rand = "0.8.4"
reqwest = { version = "0.11.4", default_features = false, features = ["rustls-tls"] }
uuid = { version = "0.8.2", features = ["v4"] }
cron = "0.9.0"
tap = "1.0.1"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
rev = "6aecff3"
features = ["json"]

[dev-dependencies]
anyhow = "1.0.41"
tokio = "1.7.1"
wiremock = "0.5.3"
reqwest = { version = "0.11.4", default_features = false, features = ["rustls-tls", "json"] }
