[package]
name = "server"
version = "0.5.0"
authors = ["Thomas Harris <teh019283@gmail.com>"]
edition = "2021"

[lib]
# sqlx::query has a failing doc test but I can find literally no info about it
# so, no doc tests until we figure out what the hell is going on
doctest = false

[dependencies]
serde = "1.0.132"
settings = { path = "../settings" }
toml = "0.5.8"
thiserror = "1.0.30"
sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
anyhow = "1.0.52"
futures = "0.3.19"
tokio = { version = "1.15.0", features = ["full"] }
rss = "2.0.0"
chrono = "0.4.19"
rand = "0.8.4"
reqwest = { version = "0.11.8", default_features = false, features = ["rustls-tls"] }
uuid = { version = "0.8.2", features = ["v4"] }
cron = "0.9.0"
tap = "1.0.1"
prometheus = "0.13.0"
lazy_static = "1.4.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["json", "env-filter"] }
axum = "0.4.3"
tower-http = { version = "0.2.0", features = ["trace"] }
mime = "0.3.16"
tower = "0.4.11"

[dev-dependencies]
anyhow = "1.0.52"
wiremock = "0.5.8"
reqwest = { version = "0.11.8", default_features = false, features = ["rustls-tls", "json"] }
