[package]
name = "settings"
version = "0.1.0"
authors = ["Thomas Harris <teh019283@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO no anyhow in library crate
anyhow = "1.0.40"
chrono = "0.4.19"
rss = "1.10.0"
scraper = "0.12.0"
serde = "1.0.125"
serde_derive = "1.0.125"
