[package]
name = "settings"
version = "0.2.0"
authors = ["Thomas Harris <teh019283@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
rss = "2.0.0"
scraper = "0.12.0"
serde = "1.0.132"
serde_derive = "1.0.132"
tap = "1.0.1"
thiserror = "1.0.30"
